k8s/ingress-pr.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ${SERVICE_NAME_PLACEHOLDER}-ingress${PR_NUMBER_PLACEHOLDER}
spec:
  rules:
    - http:
        paths:
          - path: /pr-
            pathType: Prefix
            backend:
              service:
                name: ${SERVICE_NAME_PLACEHOLDER}${PR_NUMBER_PLACEHOLDER}
                port:
                  number: ${SERVICE_PORT_PLACEHOLDER}
